H3CIPMSJAVA-20180830/src/objects/Opportunity_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Competitor</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HP_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>HP SFDC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incumbent Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Competitor</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor_Name__c</fullName>
        <description>Check if Primary Competitor is check, them this field will show Primary competitor name, if not ,then remain empty</description>
        <formula>IF( Primary_Competitor__c  = TRUE,  Competitor__r.Name , &quot;&quot;)</formula>
        <label>Primary Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winning Competitor</label>
        <type>Checkbox</type>
    </fields>
    <label>业务机会竞争对手</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>Opportunity Competitor No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>